@@ -3,12 +3,13 @@ package com.trionesdev.phecda.foundation.core.domains.messageforwarding.manager.
 import cn.hutool.core.collection.CollectionUtil;
 import com.trionesdev.phecda.foundation.core.domains.messageforwarding.dao.impl.*;
 import com.trionesdev.phecda.foundation.core.domains.messageforwarding.dao.po.MessageForwardingRulePO;
-import com.trionesdev.phecda.foundation.core.domains.messageforwarding.dao.po.MessageSinkPO;
+import com.trionesdev.phecda.foundation.core.domains.messageforwarding.dao.po.MessageSourceTopicPO;
+import com.trionesdev.phecda.foundation.core.domains.messageforwarding.internal.MessageForwardingDomainConvert;
+import com.trionesdev.phecda.foundation.core.domains.messageforwarding.internal.aggregate.entity.MessageSink;
+import com.trionesdev.phecda.foundation.core.domains.messageforwarding.internal.aggregate.root.MessageForwardingRuleAggregate;
 import lombok.RequiredArgsConstructor;
 import com.trionesdev.phecda.foundation.core.domains.messageforwarding.dao.criteria.MessageForwardingRuleCriteria;
-import com.trionesdev.phecda.foundation.core.domains.messageforwarding.dao.po.MessageSourceTopic;
-import com.trionesdev.phecda.foundation.core.domains.messageforwarding.dto.MessageForwardingRuleDTO;
-import com.trionesdev.phecda.foundation.core.domains.messageforwarding.dto.MessageSourceDTO;
+import com.trionesdev.phecda.foundation.core.domains.messageforwarding.internal.aggregate.entity.MessageSource;
 import org.apache.commons.collections4.MultiValuedMap;
 import org.apache.commons.collections4.multimap.HashSetValuedHashMap;
 import org.springframework.stereotype.Service;
@@ -19,6 +20,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Service
 public class MessageForwardingRuleManager {
+    private final MessageForwardingDomainConvert convert;
     private final MessageForwardingRuleDAO messageForwardingRuleDAO;
     private final RuleSourceDAO ruleSourceDAO;
     private final RuleSinkDAO ruleSinkDAO;
@@ -46,14 +48,17 @@ public class MessageForwardingRuleManager {
         return messageForwardingRuleDAO.list();
     }
 
-    public List<MessageForwardingRuleDTO> activeForwardingList() {
-        List<MessageForwardingRuleDTO> messageForwardingList = new ArrayList<>();
+    /**
+     * 获取全部激活的转发规则
+     *
+     * @return
+     */
+    public List<MessageForwardingRuleAggregate> activeForwardingList() {
         List<MessageForwardingRulePO> messageForwardingRulePOS = messageForwardingRuleDAO.selectList(MessageForwardingRuleCriteria.builder().enabled(true).build());
         if (CollectionUtil.isEmpty(messageForwardingRulePOS)) {
             return Collections.emptyList();
         }
         Set<String> ruleIds = messageForwardingRulePOS.stream().map(MessageForwardingRulePO::getId).collect(Collectors.toSet());
-//        Set<String> sourceIds = ruleSourceDAO.selectByRuleIds(ruleIds).stream().map(RuleSource::getSourceId).collect(Collectors.toSet());
 
         MultiValuedMap<String, String> ruleSourceMap = new HashSetValuedHashMap<>();
         Set<String> sourceIds = new HashSet<>();
@@ -69,26 +74,28 @@ public class MessageForwardingRuleManager {
             sinkIds.add(ruleSink.getSinkId());
         });
 
-//        Set<String> sinkIds = ruleSinkDAO.selectListByRuleIds(ruleIds).stream().map(RuleSink::getSinkId).collect(Collectors.toSet());
-        List<MessageSourceTopic> sourceTopics = messageSourceTopicDAO.selectListBySourceIds(sourceIds);
+        List<MessageSourceTopicPO> sourceTopics = messageSourceTopicDAO.selectListBySourceIds(sourceIds);
 
-        Map<String, MessageSourceDTO> messageSourceMap = messageSourceDAO.selectListByIds(sourceIds).stream().map(source -> {
-            List<MessageSourceDTO.Topic> topics = sourceTopics.stream().filter(topic -> topic.getSourceId().equals(source.getId())).map(topic -> MessageSourceDTO.Topic.builder().id(topic.getId()).topic(topic.getTopic()).build()).collect(Collectors.toList());
-            return MessageSourceDTO.builder()
+        Map<String, MessageSource> messageSourceMap = messageSourceDAO.selectListByIds(sourceIds).stream().map(source -> {
+            List<MessageSource.Topic> topics = sourceTopics.stream().filter(topic -> topic.getSourceId().equals(source.getId())).map(topic -> MessageSource.Topic.builder().id(topic.getId()).topic(topic.getTopic()).build()).collect(Collectors.toList());
+            return MessageSource.builder()
                     .id(source.getId())
                     .topics(topics)
                     .build();
-        }).collect(Collectors.toMap(MessageSourceDTO::getId, source -> source, (v1, v2) -> v1));
-//        Map<String, MessageSink> messageSinkMap = messageSinkDAO.selectListByIds(sinkIds).stream().collect(Collectors.toMap(MessageSink::getId, sink -> sink, (v1, v2) -> v1));
-        MultiValuedMap<String, MessageSinkPO> ruleMessageSinksMap = new HashSetValuedHashMap<>();
-        List<MessageSinkPO> messageSinkPOS = messageSinkDAO.selectListByIds(sinkIds).stream().peek(t-> t.getAction().setId(t.getId())).collect(Collectors.toList());
+        }).collect(Collectors.toMap(MessageSource::getId, source -> source, (v1, v2) -> v1));
+        MultiValuedMap<String, MessageSink> ruleMessageSinksMap = new HashSetValuedHashMap<>();
+        List<MessageSink> messageSinkPOS = messageSinkDAO.selectListByIds(sinkIds).stream().map(t -> {
+            var sink = convert.messageSinkPoToEntity(t);
+            sink.getAction().setId(t.getId());
+            return sink;
+        }).toList();
         ruleSinkMap.asMap().forEach((k, v) -> ruleMessageSinksMap.putAll(k, messageSinkPOS.stream().filter(messageSink -> CollectionUtil.contains(v, messageSink.getId())).collect(Collectors.toList())));
 
-       return messageForwardingRulePOS.stream().map(rule -> {
+        return messageForwardingRulePOS.stream().map(rule -> {
 
-            MessageSourceDTO messageSourceDTO = messageSourceMap.get(Optional.ofNullable(ruleSourceMap.get(rule.getId())).flatMap(t -> t.stream().findFirst()).orElse(null));
+            MessageSource messageSourceDTO = messageSourceMap.get(Optional.ofNullable(ruleSourceMap.get(rule.getId())).flatMap(t -> t.stream().findFirst()).orElse(null));
 
-           return MessageForwardingRuleDTO.builder()
+            return MessageForwardingRuleAggregate.builder()
                     .id(rule.getId())
                     .name(rule.getName())
                     .description(rule.getDescription())
